--- a/02_gowin/DDS_project/impl/pnr/DDS_project.power.html
+++ b/02_gowin/DDS_project/impl/pnr/DDS_project.power.html
@@ -63,7 +63,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">Physical Constraints File</td>
-<td>---</td>
+<td>/home/pol/Documents/KMITL/year3/project1/DDS_project/02_gowin/DDS_project/src/DDS_project.cst</td>
 </tr>
 <tr>
 <td class="label">Timing Constraints File</td>
@@ -87,7 +87,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">Created Time</td>
-<td>Tue Jun 18 19:30:34 2024
+<td>Sat Jun 29 18:48:28 2024
 </td>
 </tr>
 <tr>
