--- a/02_gowin/DDS_project/impl/pnr/DDS_project.rpt.html
+++ b/02_gowin/DDS_project/impl/pnr/DDS_project.rpt.html
@@ -59,7 +59,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">Physical Constraints File</td>
-<td>---</td>
+<td>/home/pol/Documents/KMITL/year3/project1/DDS_project/02_gowin/DDS_project/src/DDS_project.cst</td>
 </tr>
 <tr>
 <td class="label">Timing Constraints File</td>
@@ -83,7 +83,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">Created Time</td>
-<td>Tue Jun 18 19:30:34 2024
+<td>Sat Jun 29 18:48:28 2024
 </td>
 </tr>
 <tr>
@@ -97,24 +97,24 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <tr>
 <td class="label">Place & Route Process</td>
 <td>Running placement:
-   Placement Phase 0: CPU time = 0h 0m 0.006s, Elapsed time = 0h 0m 0.009s
-   Placement Phase 1: CPU time = 0h 0m 0.174s, Elapsed time = 0h 0m 0.176s
+   Placement Phase 0: CPU time = 0h 0m 0.007s, Elapsed time = 0h 0m 0.009s
+   Placement Phase 1: CPU time = 0h 0m 0.199s, Elapsed time = 0h 0m 0.202s
    Placement Phase 2: CPU time = 0h 0m 0s, Elapsed time = 0h 0m 0s
-   Placement Phase 3: CPU time = 0h 0m 2s, Elapsed time = 0h 0m 2s
+   Placement Phase 3: CPU time = 0h 0m 3s, Elapsed time = 0h 0m 3s
    Total Placement: CPU time = 0h 0m 3s, Elapsed time = 0h 0m 3s
 Running routing:
    Routing Phase 0: CPU time = 0h 0m 0s, Elapsed time = 0h 0m 0.001s
-   Routing Phase 1: CPU time = 0h 0m 0.346s, Elapsed time = 0h 0m 0.346s
-   Routing Phase 2: CPU time = 0h 0m 0.069s, Elapsed time = 0h 0m 0.067s
+   Routing Phase 1: CPU time = 0h 0m 0.476s, Elapsed time = 0h 0m 0.47s
+   Routing Phase 2: CPU time = 0h 0m 0.079s, Elapsed time = 0h 0m 0.079s
    Routing Phase 3: CPU time = 0h 0m 0s, Elapsed time = 0h 0m 0s
-   Total Routing: CPU time = 0h 0m 0.415s, Elapsed time = 0h 0m 0.414s
+   Total Routing: CPU time = 0h 0m 0.555s, Elapsed time = 0h 0m 0.55s
 Generate output files:
-   CPU time = 0h 0m 0.636s, Elapsed time = 0h 0m 0.63s
+   CPU time = 0h 0m 0.722s, Elapsed time = 0h 0m 0.715s
 </td>
 </tr>
 <tr>
 <td class="label">Total Time and Memory Usage</td>
-<td>CPU time = 0h 0m 4s, Elapsed time = 0h 0m 4s, Peak memory usage = 274MB</td>
+<td>CPU time = 0h 0m 4s, Elapsed time = 0h 0m 4s, Peak memory usage = 283MB</td>
 </tr>
 </table>
 <br/>
