--- a/02_gowin/DDS_project/impl/gwsynthesis/DDS_project_syn_resource.html
+++ b/02_gowin/DDS_project/impl/gwsynthesis/DDS_project_syn_resource.html
@@ -29,11 +29,110 @@ table td.label { width: 20%; white-space: nowrap; min-width: 20px; background-co
 <th class="label">SSRAM NUMBER</th>
 </tr>
 <tr>
-<td class="label">pll_module (/home/pol/Documents/KMITL/year3/project1/DDS_project/02_gowin/DDS_project/src/gowin_rpll/pll_module.v)</td>
+<td class="label">dds_top (/home/pol/Documents/KMITL/year3/project1/DDS_project/02_gowin/DDS_project/src/dds_top.v)</td>
+<td align = "center">-</td>
+<td align = "center">-</td>
+<td align = "center">1</td>
+<td align = "center">-</td>
+<td align = "center">-</td>
+<td align = "center">-</td>
+</tr>
+<td class="label">&nbsp&nbsp&nbsp&nbsp|--RESETGEN_module
+ (/home/pol/Documents/KMITL/year3/project1/DDS_project/02_gowin/DDS_project/src/dds_top.v)</td>
+<td align = "center">33</td>
+<td align = "center">-</td>
+<td align = "center">56</td>
+<td align = "center">-</td>
+<td align = "center">-</td>
+<td align = "center">-</td>
+</tr>
+<td class="label">&nbsp&nbsp&nbsp&nbsp|--PLL_module
+ (/home/pol/Documents/KMITL/year3/project1/DDS_project/02_gowin/DDS_project/src/dds_top.v)</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
+<td align = "center">-</td>
+<td align = "center">-</td>
+</tr>
+<td class="label">&nbsp&nbsp&nbsp&nbsp|--CLK_DIV_module
+ (/home/pol/Documents/KMITL/year3/project1/DDS_project/02_gowin/DDS_project/src/dds_top.v)</td>
+<td align = "center">2</td>
+<td align = "center">-</td>
+<td align = "center">4</td>
+<td align = "center">-</td>
+<td align = "center">-</td>
+<td align = "center">-</td>
+</tr>
+<td class="label">&nbsp&nbsp&nbsp&nbsp|--MODE_BTN_module
+ (/home/pol/Documents/KMITL/year3/project1/DDS_project/02_gowin/DDS_project/src/dds_top.v)</td>
+<td align = "center">4</td>
+<td align = "center">-</td>
+<td align = "center">1</td>
+<td align = "center">-</td>
+<td align = "center">-</td>
+<td align = "center">-</td>
+</tr>
+<td class="label">&nbsp&nbsp&nbsp&nbsp|--SAMP_module
+ (/home/pol/Documents/KMITL/year3/project1/DDS_project/02_gowin/DDS_project/src/dds_top.v)</td>
+<td align = "center">28</td>
+<td align = "center">-</td>
+<td align = "center">77</td>
+<td align = "center">2</td>
+<td align = "center">-</td>
+<td align = "center">-</td>
+</tr>
+<td class="label">&nbsp&nbsp&nbsp&nbsp|--STEP_BTN_module
+ (/home/pol/Documents/KMITL/year3/project1/DDS_project/02_gowin/DDS_project/src/dds_top.v)</td>
+<td align = "center">4</td>
+<td align = "center">-</td>
+<td align = "center">1</td>
+<td align = "center">-</td>
+<td align = "center">-</td>
+<td align = "center">-</td>
+</tr>
+<td class="label">&nbsp&nbsp&nbsp&nbsp|--ROTARY_module
+ (/home/pol/Documents/KMITL/year3/project1/DDS_project/02_gowin/DDS_project/src/dds_top.v)</td>
+<td align = "center">59</td>
+<td align = "center">34</td>
+<td align = "center">80</td>
+<td align = "center">-</td>
+<td align = "center">-</td>
+<td align = "center">-</td>
+</tr>
+<td class="label">&nbsp&nbsp&nbsp&nbsp|--lookup_module
+ (/home/pol/Documents/KMITL/year3/project1/DDS_project/02_gowin/DDS_project/src/dds_top.v)</td>
+<td align = "center">-</td>
+<td align = "center">-</td>
+<td align = "center">-</td>
+<td align = "center">-</td>
+<td align = "center">-</td>
+<td align = "center">-</td>
+</tr>
+<td class="label">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp|--rom_module
+ (/home/pol/Documents/KMITL/year3/project1/DDS_project/02_gowin/DDS_project/src/lookup_table.v)</td>
+<td align = "center">-</td>
+<td align = "center">-</td>
+<td align = "center">-</td>
+<td align = "center">-</td>
+<td align = "center">6</td>
+<td align = "center">-</td>
+</tr>
+<td class="label">&nbsp&nbsp&nbsp&nbsp|--OSC_module
+ (/home/pol/Documents/KMITL/year3/project1/DDS_project/02_gowin/DDS_project/src/dds_top.v)</td>
+<td align = "center">65</td>
+<td align = "center">32</td>
+<td align = "center">107</td>
+<td align = "center">1</td>
+<td align = "center">-</td>
+<td align = "center">-</td>
+</tr>
+<td class="label">&nbsp&nbsp&nbsp&nbsp|--INTERPOLATOR_module
+ (/home/pol/Documents/KMITL/year3/project1/DDS_project/02_gowin/DDS_project/src/dds_top.v)</td>
+<td align = "center">73</td>
+<td align = "center">555</td>
+<td align = "center">2042</td>
+<td align = "center">3</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
 </tr>
