--- a/02_gowin/DDS_project/impl/pnr/DDS_project.power.html
+++ b/02_gowin/DDS_project/impl/pnr/DDS_project.power.html
@@ -87,7 +87,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">Created Time</td>
-<td>Sat Jun 29 18:48:28 2024
+<td>Fri Jul  5 14:15:00 2024
 </td>
 </tr>
 <tr>
@@ -100,15 +100,15 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <table class="summary_table">
 <tr>
 <td class="label">Total Power (mW)</td>
-<td>18.010</td>
+<td>24.478</td>
 </tr>
 <tr>
 <td class="label">Quiescent Power (mW)</td>
-<td>16.600</td>
+<td>16.592</td>
 </tr>
 <tr>
 <td class="label">Dynamic Power (mW)</td>
-<td>1.410</td>
+<td>7.886</td>
 </tr>
 <tr>
 <td class="label">Psram Power (mW)</td>
@@ -119,7 +119,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <table class="summary_table">
 <tr>
 <td class="label">Junction Temperature</td>
-<td>25.363</td>
+<td>25.502</td>
 </tr>
 <tr>
 <td class="label">Theta JA</td>
@@ -127,7 +127,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">Max Allowed Ambient Temperature</td>
-<td>84.637</td>
+<td>84.498</td>
 </tr>
 </table>
 <h2><a name="Configure_Info">Configure Information:</a></h2>
@@ -196,23 +196,30 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <tr>
 <td>VCC</td>
 <td>1.200</td>
-<td>1.129</td>
-<td>3.075</td>
-<td>5.045</td>
+<td>6.135</td>
+<td>3.074</td>
+<td>11.051</td>
 </tr>
 <tr>
 <td>VCCX</td>
 <td>2.500</td>
-<td>0.013</td>
+<td>0.122</td>
 <td>3.788</td>
-<td>9.502</td>
+<td>9.776</td>
+</tr>
+<tr>
+<td>VCCIO12</td>
+<td>1.200</td>
+<td>0.002</td>
+<td>0.105</td>
+<td>0.129</td>
 </tr>
 <tr>
 <td>VCCIO18</td>
 <td>1.800</td>
-<td>0.013</td>
-<td>1.911</td>
-<td>3.463</td>
+<td>0.120</td>
+<td>1.837</td>
+<td>3.522</td>
 </tr>
 </table>
 <h1><a name="Detail">Power Details</a></h1>
@@ -225,16 +232,34 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <th class="label">Average Toggle Rate(millions of transitions/sec)</th>
 </tr>
 <tr>
+<td>Logic</td>
+<td>0.927</td>
+<td>NA</td>
+<td>5.823</td>
+</tr>
+<tr>
 <td>IO</td>
-<td>3.606
-<td>3.535
-<td>3.906
+<td>4.659
+<td>3.988
+<td>7.178
+</tr>
+<tr>
+<td>BSRAM</td>
+<td>1.030
+<td>NA</td>
+<td>NA</td>
 </tr>
 <tr>
 <td>PLL</td>
 <td>1.339
 <td>NA</td>
 <td>NA</td>
+</tr>
+<tr>
+<td>DSP</td>
+<td>3.915
+<td>NA</td>
+<td>4.100
 </tr>
 </table>
 <h2><a name="By_Hierarchy">Power By Hierarchy:</a></h2>
@@ -245,9 +270,53 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <th class="label">Block Dynamic Power(mW)</th>
 </tr>
 <tr>
-<td>pll_module</td>
+<td>dds_top</td>
+<td>7.210</td>
+<td>7.210(7.210)</td>
+<tr>
+<td>dds_top/CLK_DIV_module/</td>
+<td>0.001</td>
+<td>0.001(0.000)</td>
+<tr>
+<td>dds_top/INTERPOLATOR_module/</td>
+<td>0.811</td>
+<td>0.811(0.000)</td>
+<tr>
+<td>dds_top/MODE_BTN_module/</td>
+<td>0.000</td>
+<td>0.000(0.000)</td>
+<tr>
+<td>dds_top/OSC_module/</td>
+<td>3.967</td>
+<td>3.967(0.000)</td>
+<tr>
+<td>dds_top/PLL_module/</td>
 <td>1.339</td>
 <td>1.339(0.000)</td>
+<tr>
+<td>dds_top/RESETGEN_module/</td>
+<td>0.005</td>
+<td>0.005(0.000)</td>
+<tr>
+<td>dds_top/ROTARY_module/</td>
+<td>0.045</td>
+<td>0.045(0.000)</td>
+<tr>
+<td>dds_top/SAMP_module/</td>
+<td>0.012</td>
+<td>0.012(0.000)</td>
+<tr>
+<td>dds_top/STEP_BTN_module/</td>
+<td>0.000</td>
+<td>0.000(0.000)</td>
+<tr>
+<td>dds_top/lookup_module/</td>
+<td>1.030</td>
+<td>1.030(1.030)</td>
+<tr>
+<td>dds_top/lookup_module/rom_module/</td>
+<td>1.030</td>
+<td>1.030(0.000)</td>
 </table>
 <h2><a name="By_Clock_Domain">Power By Clock Domain:</a></h2>
 <table class="detail_table">
@@ -257,9 +326,24 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <th class="label">Total Dynamic Power(mW)</th>
 </tr>
 <tr>
-<td>clkin</td>
+<td>fg_clk</td>
+<td>50.000</td>
+<td>5.870</td>
+</tr>
+<tr>
+<td>PLL_module/rpll_inst/CLKOUT.default_gen_clk</td>
+<td>48.000</td>
+<td>0.001</td>
+</tr>
+<tr>
+<td>NO CLOCK DOMAIN</td>
+<td>0.000</td>
+<td>0.000</td>
+</tr>
+<tr>
+<td>input_clk_27M</td>
 <td>27.000</td>
-<td>1.339</td>
+<td>1.345</td>
 </tr>
 </table>
 </div><!-- content -->
