--- a/02_gowin/DDS_project/impl/pnr/DDS_project.power.html
+++ b/02_gowin/DDS_project/impl/pnr/DDS_project.power.html
@@ -67,7 +67,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">Timing Constraints File</td>
-<td>---</td>
+<td>/home/pol/Documents/KMITL/year3/project1/DDS_project/02_gowin/DDS_project/src/DDS_project.sdc</td>
 </tr>
 <tr>
 <td class="label">Version</td>
@@ -87,7 +87,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">Created Time</td>
-<td>Sun Jul  7 18:39:16 2024
+<td>Mon Jul  8 18:10:57 2024
 </td>
 </tr>
 <tr>
@@ -100,15 +100,15 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <table class="summary_table">
 <tr>
 <td class="label">Total Power (mW)</td>
-<td>24.550</td>
+<td>24.871</td>
 </tr>
 <tr>
 <td class="label">Quiescent Power (mW)</td>
-<td>16.640</td>
+<td>19.935</td>
 </tr>
 <tr>
 <td class="label">Dynamic Power (mW)</td>
-<td>7.909</td>
+<td>4.936</td>
 </tr>
 <tr>
 <td class="label">Psram Power (mW)</td>
@@ -119,7 +119,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <table class="summary_table">
 <tr>
 <td class="label">Junction Temperature</td>
-<td>25.504</td>
+<td>25.510</td>
 </tr>
 <tr>
 <td class="label">Theta JA</td>
@@ -127,7 +127,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">Max Allowed Ambient Temperature</td>
-<td>84.496</td>
+<td>84.490</td>
 </tr>
 </table>
 <h2><a name="Configure_Info">Configure Information:</a></h2>
@@ -196,23 +196,23 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <tr>
 <td>VCC</td>
 <td>1.200</td>
-<td>6.153</td>
-<td>3.074</td>
-<td>11.072</td>
+<td>3.587</td>
+<td>3.082</td>
+<td>8.003</td>
 </tr>
 <tr>
 <td>VCCX</td>
 <td>2.500</td>
-<td>0.122</td>
+<td>0.109</td>
 <td>3.788</td>
-<td>9.776</td>
+<td>9.742</td>
 </tr>
 <tr>
-<td>VCCIO18</td>
-<td>1.800</td>
-<td>0.122</td>
-<td>1.935</td>
-<td>3.702</td>
+<td>VCCIO33</td>
+<td>3.300</td>
+<td>0.109</td>
+<td>2.050</td>
+<td>7.125</td>
 </tr>
 </table>
 <h1><a name="Detail">Power Details</a></h1>
@@ -226,19 +226,19 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td>Logic</td>
-<td>0.948</td>
+<td>0.458</td>
 <td>NA</td>
-<td>5.762</td>
+<td>2.807</td>
 </tr>
 <tr>
 <td>IO</td>
-<td>4.709
-<td>4.037
-<td>7.178
+<td>8.107
+<td>7.345
+<td>4.441
 </tr>
 <tr>
 <td>BSRAM</td>
-<td>1.030
+<td>0.494
 <td>NA</td>
 <td>NA</td>
 </tr>
@@ -250,9 +250,9 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td>DSP</td>
-<td>3.915
+<td>1.879
 <td>NA</td>
-<td>3.953
+<td>1.898
 </tr>
 </table>
 <h2><a name="By_Hierarchy">Power By Hierarchy:</a></h2>
@@ -264,24 +264,24 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td>dds_top</td>
-<td>7.232</td>
-<td>7.232(7.232)</td>
+<td>4.170</td>
+<td>4.170(4.170)</td>
 <tr>
 <td>dds_top/CLK_DIV_module/</td>
 <td>0.001</td>
 <td>0.001(0.000)</td>
 <tr>
 <td>dds_top/INTERPOLATOR_module/</td>
-<td>0.810</td>
-<td>0.810(0.000)</td>
+<td>0.389</td>
+<td>0.389(0.000)</td>
 <tr>
 <td>dds_top/MODE_BTN_module/</td>
-<td>0.009</td>
-<td>0.009(0.000)</td>
+<td>0.004</td>
+<td>0.004(0.000)</td>
 <tr>
 <td>dds_top/OSC_module/</td>
-<td>3.967</td>
-<td>3.967(0.000)</td>
+<td>1.904</td>
+<td>1.904(0.000)</td>
 <tr>
 <td>dds_top/PLL_module/</td>
 <td>1.339</td>
@@ -292,24 +292,24 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>0.005(0.000)</td>
 <tr>
 <td>dds_top/ROTARY_module/</td>
-<td>0.045</td>
-<td>0.045(0.000)</td>
+<td>0.022</td>
+<td>0.022(0.000)</td>
 <tr>
 <td>dds_top/SAMP_module/</td>
-<td>0.017</td>
-<td>0.017(0.000)</td>
+<td>0.008</td>
+<td>0.008(0.000)</td>
 <tr>
 <td>dds_top/STEP_BTN_module/</td>
-<td>0.009</td>
-<td>0.009(0.000)</td>
+<td>0.004</td>
+<td>0.004(0.000)</td>
 <tr>
 <td>dds_top/lookup_module/</td>
-<td>1.030</td>
-<td>1.030(1.030)</td>
+<td>0.494</td>
+<td>0.494(0.494)</td>
 <tr>
 <td>dds_top/lookup_module/rom_module/</td>
-<td>1.030</td>
-<td>1.030(0.000)</td>
+<td>0.494</td>
+<td>0.494(0.000)</td>
 </table>
 <h2><a name="By_Clock_Domain">Power By Clock Domain:</a></h2>
 <table class="detail_table">
@@ -319,24 +319,24 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <th class="label">Total Dynamic Power(mW)</th>
 </tr>
 <tr>
-<td>fg_clk</td>
-<td>50.000</td>
-<td>5.891</td>
-</tr>
-<tr>
-<td>PLL_module/rpll_inst/CLKOUT.default_gen_clk</td>
-<td>48.000</td>
-<td>0.001</td>
-</tr>
-<tr>
-<td>input_clk_27M</td>
-<td>27.000</td>
-<td>1.345</td>
+<td>CLK_24M</td>
+<td>24.000</td>
+<td>2.828</td>
 </tr>
 <tr>
 <td>NO CLOCK DOMAIN</td>
 <td>0.000</td>
 <td>0.000</td>
+</tr>
+<tr>
+<td>CLK_27M</td>
+<td>27.000</td>
+<td>1.345</td>
+</tr>
+<tr>
+<td>CLK_PLL</td>
+<td>48.001</td>
+<td>0.001</td>
 </tr>
 </table>
 </div><!-- content -->
